# mesh_pulse

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
mesh_pulse/: __init__.py  __main__.py  app.py
mesh_pulse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mesh_pulse/core/: __init__.py  discovery.py  engine.py  monitor.py  transfer.py
mesh_pulse/tui/: __init__.py  dashboard.py
mesh_pulse/tui/styles/: dashboard.tcss
mesh_pulse/tui/widgets/: __init__.py  event_log.py  peer_list.py  system_health.py  transfer_bar.py
mesh_pulse/utils/: __init__.py  config.py  crypto.py  logger.py
tests/: __init__.py  test_crypto.py  test_crypto_dos.py  test_discovery.py  test_loopback_transfer.py  test_monitor.py  test_multi_transfer.py  test_path_traversal.py  test_transfer.py
